--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,7 @@
-	.container { margin-top: 100vh;}
+	::-webkit-scrollbar {
+		display: none;
+	}
+	
 	.slide {
 		position: relative;
 		margin: 0 auto;
@@ -18,13 +21,17 @@
 	#parallax {
 		min-height: 400px;
 		background: #f4e690;
+		overflow-y: scroll;
+		-webkit-overflow-scrolling: touch;
 	}
-	#parallax-container .notice { position: fixed; right: 20px; top: 20px; background-color: #f7f7f7; padding: 5px 20px; border-radius: 30px; color: #333; -webkit-transition: opacity 0.3s linear; -moz-transition: opacity 0.3s linear; -o-transition: opacity 0.3s linear; -ms-transition: opacity 0.3s linear; transition: opacity 0.3s linear; opacity: 0; z-index: 9999; backface-visibility: hidden;}
-	#parallax-container.alert .notice { position: fixed; right: 20px; top: 20px; opacity: 1; z-index: 9999; backface-visibility: hidden;}
-	#parallax-container.scrolled .notice { background-color: #1c0806; color: #ccc; -webkit-transform:translateZ(0); -webkit-transition: all 0.3s linear; -moz-transition: all 0.3s linear; transition: all 0.3s linear}
+	#parallax-container .notice { position: fixed; right: 20px; top: 20px; background-color: #f7f7f7; padding: 5px 20px; border-radius: 30px; color: #333; -webkit-transition: opacity 0.3s linear; -moz-transition: opacity 0.3s linear; -o-transition: opacity 0.3s linear; -ms-transition: opacity 0.3s linear; transition: opacity 0.3s linear; opacity: 0; z-index: 9999; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; font-size: 14px;}
+	#parallax-container.alert .notice { position: fixed; right: 20px; top: 20px; opacity: 1; z-index: 9999; backface-visibility: hidden; -webkit-backface-visibility: hidden; -webkit-perspective: 1000; }
+	
 
-	header { position:absolute; left:0; right:0; margin-left:auto; margin-right:auto; width: 800px; text-align: center; 
-		  animation-delay: 2.5s;
+	header { left:0; right:0; margin-left:auto; margin-right:auto; width: 100%; min-width: 300px; text-align: center; }
+	header.desktop {
+		position: absolute; 
+		animation-delay: 2.5s;
 		    -webkit-animation-delay: 2.5s;
 		    -moz-animation-delay: 2.5s;
 		    -o-animation-delay: 2.5s;
@@ -33,13 +40,11 @@
 	header h1 { padding-top: 100px; }
 	header h6 { text-transform: uppercase; font-size: 22px; font-size: 2.2rem; color: #d0512f;}
 	
-	#about { background-color: #1c0806; color: #ccc; padding: 0; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; }
+	#about { background-color: #1c0806; color: #ccc; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
 	#about .sixteen.columns { display: block; }
-	#about.scrolled { background-color: #f7f7f7; -webkit-transition: background-color 0.5s linear; -moz-transition: background-color 0.5s linear; -o-transition: background-color 0.5s linear; -ms-transition: background-color 0.5s linear; transition: background-color 0.5s linear; }
-	#about.scrolled .sixteen.columns { display: none; }
 	#about .circle { width: 60px; height: 60px; background: #f7f7f7; display: inline-block; margin-right: 5px; vertical-align: middle;}
 	#about .circle img { width: 70%; height: auto; }
-	#about h5 { display: inline-block; vertical-align: middle; margin-bottom: 0; margin-right: 5px;}
+	#about h5 { display: inline-block; vertical-align: middle; margin-bottom: 0; margin-right: 5px; }
 	#about h6 { font-size: 24px; font-size: 2.4rem; display: inline-block; margin-bottom: 30px;}
 	#about div.button { padding: 10px; border: #ccc solid 3px; border-radius: 100px; vertical-align: middle; }
 	#about span { font-family: 'Sentinel Ssm A', 'Sentinel Ssm B', Georgia, sans-serif; font-style: italic; text-transform: none; vertical-align: top; margin: 0 5px;}
@@ -72,10 +77,7 @@
 
 	#testimonial { }
 
-	#social { background-color: #1c0806; padding: 0; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; }
-	#social.scrolled { background-color: #f7f7f7; -webkit-transition: background-color 0.5s linear; -moz-transition: background-color 0.5s linear; -o-transition: background-color 0.5s linear; -ms-transition: background-color 0.5s linear; transition: background-color 0.5s linear; }
-	#social .row { display: none; }
-	#social.scrolled .row { display: block; }
+	#social { background-color: #1c0806; padding: 0; -webkit-transition: background-color 0.3s linear; -moz-transition: background-color 0.3s linear; -o-transition: background-color 0.3s linear; -ms-transition: background-color 0.3s linear; transition: background-color 0.3s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
 	#social .favorite-things div { display: inline-block; float: left; }
 	#social .favorite-things i { margin-right: 8px; display: inline-block; vertical-align: middle; }
 	#social .favorite-things span { font-size: 16px; font-size: 1.6rem; display: inline-block; vertical-align: middle; margin-right: 40px;}
@@ -92,7 +94,7 @@
 		
 	#contact { background-color: #fff; padding: 0; }
 	#contact .michael-photo { width: 50%; height: 100%; float: left; background: url('../images/me-photo.jpg') center no-repeat; background-size: cover;}
-	#contact .michael-contact { width: 50%; height: 100%; float: right; width: 50%; height: 100%; float: right; background-color: #fff; box-sizing: border-box;}
+	#contact .michael-contact { width: 50%; height: 100%; float: right; background-color: #fff; box-sizing: border-box;}
 	#contact h3 { font-size:60px; font-size:6rem }
 	#contact a, #contact a:visited { color: #e3e0db; }
 	#contact a:hover { color: #ef4723; -webkit-transition: color 0.5s; transition: color 0.35s; }
@@ -122,8 +124,8 @@
 		padding: 10px 0; 
 		font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif;
 		font-weight: 800;
-		font-size: 20px;
-		font-size: 2.0rem;
+		font-size: 16px;
+		font-size: 1.6rem;
 		text-transform: uppercase;
 		letter-spacing: 2px;
 		-webkit-transition: all .3s linear;
@@ -153,6 +155,31 @@
 	#tarpits, #capitalist { display:none; padding: 30px; background: #FFF; box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7); max-width: 85%; }
 	
 	#tarpits img, #capitalist img { width: 100%; }
+
+	.copyright-props {
+		height: 50px;
+		padding: 0 20px;
+		background-color: #1c0806;
+		bottom: 0;
+		text-align: center;
+		display: block;
+	}
+
+	.copyright-props .copyright, .copyright-props .props {
+		font-size: 14px;
+		font-family: "Verlag A", "Verlag B", "Helvetica", sans-serif;
+		color: #ccc;
+		display: block;
+		letter-spacing: 0;
+		margin-bottom: 0;
+	}
+	.copyright-props .props a {
+		color: #eee;
+		font-weight: bold;
+	}
+	.copyright-props .props a:hover {
+		color: #fff;
+	}
 	
 	#lean_overlay {
     position: fixed;
@@ -214,9 +241,21 @@
 		}
 	}
 
-	/* Tablet Portrait size to standard 960 (devices and browsers) */
-	@media only screen and (min-width: 768px) and (max-width: 959px) {
-		
+	/* Larger than Mobile */
+	@media only screen and (min-width: 768px) {
+		.container { margin-top: 100vh;}
+		#about { padding: 0; }
+		#about h5 { font-size: 12px; }
+		/* Scrolled */
+		#parallax-container.scrolled .notice { background-color: #1c0806; color: #ccc; -webkit-transform:translateZ(0); -webkit-transition: all 0.3s linear; -moz-transition: all 0.3s linear; transition: all 0.3s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
+		#about.scrolled { background-color: #f7f7f7; -webkit-transition: background-color 0.5s linear; -moz-transition: background-color 0.5s linear; -o-transition: background-color 0.5s linear; -ms-transition: background-color 0.5s linear; transition: background-color 0.5s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
+		#about.scrolled .sixteen.columns { display: none; }
+		#social .row { display: none; }
+		#social.scrolled { background-color: #f7f7f7; -webkit-transition: background-color 0.5s linear; -moz-transition: background-color 0.5s linear; -o-transition: background-color 0.5s linear; -ms-transition: background-color 0.5s linear; transition: background-color 0.5s linear; -webkit-backface-visibility: hidden; -webkit-perspective: 1000;}
+		#social.scrolled .row { display: block; }
+		.copyright-props .copyright { float: left;}
+		.copyright-props .props { float: right ;}
+
 	}
 
 	/* All Mobile Sizes (devices and browser) */
@@ -241,15 +280,81 @@
 		
 		.center-if-mobile {text-align:center;}
 		
-		#about { padding-bottom: 100px; padding-bottom: 10rem;}
+		#about { padding: 40px 20px 120px; }
 		#about p, #about span { font-size: 24px; font-size:2.4rem !important; }
+		#about h5 { font-size: 12px; }
+		#social {
+			background-color: #fff;
+			padding: 60px 20px;
+		}
+		#social .favorite-things, #social .social-icons {
+			overflow: hidden;
+		}
+		#social .social-icons {
+			width: 50%;
+			margin-bottom: 40px !important;
+		}
+		#social .favorite-things {
+			margin-bottom: 40px !important;
+		}
+		#social .favorite-things div {
+			margin-bottom: 20px;
+			width: 50%;
+		}
+		#social .favorite-things i, #social .favorite-things span, #social .social-icons a span, #social .social-icons a i, #social p.tweet {
+			font-size: 16px;
+			word-break: break-word; -webkit-hyphens: auto; -moz-hyphens: auto; hyphens: auto;
+		}
+		#social .row {
+			display: block;
+			top: 0;
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			transform: translateY(0);
+		}
 		
 		#portfolio { padding: 0; height: auto; background-color: #fff; }
 		#portfolio .item {width: 100%; height: 200px; text-align: center; transition: all .5s; -webkit-transition: all .5s; z-index: 1;}
 		#portfolio .item:hover {background-color: rgba(0,0,0,0.5);}
+
+		#contact .michael-photo {
+			width: 100%;
+			height: 400px;
+		}
+		#contact .michael-contact {
+			width: 100%;
+			min-height: 500px;
+		}
+		.contact-top blockquote {
+			position: relative;
+			top: 0;
+			margin-bottom: 0;
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			transform: translateY(0);
+		}
+		.contact-top p {
+			font-size: 24px;
+		}
+		.contact-top cite {
+			font-size: 12px;
+		}
+		.contact-bottom .email-me {
+			position: relative;
+			top: 0;
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			transform: translateY(0);
+		}
+		.contact-bottom p {
+			font-size: 16px;
+		}
+		#mc_embed_signup input {
+			font-size: 22px;
+		}
 		
 		body {
-		font-family: "ff-meta-web-pro", "Helvetica", serif;
+		font-family: "Sentinel Ssm A", "Sentinel Ssm B", "Helvetica", serif;
 		font-size: 24px;
 		font-size: 2.4rem;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
@@ -257,8 +362,8 @@
 		}
 		
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-		h1 { font-size: 59px; font-size: 5.9rem; line-height: 1.2;}
-		h2 { font-size: 46px; font-size: 4.6rem; line-height: 50px; margin-bottom: 50px;}
+		h1 { font-size: 46px; font-size: 4.6rem; line-height: 1.2;}
+		h2 { font-size: 38px; font-size: 3.8rem; line-height: 50px; margin-bottom: 50px;}
 		h3 { font-size: 35px; font-size: 3.5rem; line-height: 40px; margin-bottom: 10px; }
 		h4 { font-size: 28px; font-size: 2.8rem; line-height: 34px; margin-bottom: 8px; }
 		h5 { font-size: 21px; font-size: 2.1rem; line-height: 30px; margin-bottom: 4px; }
@@ -269,6 +374,23 @@
 		p.lead { font-size: 46px; font-size: 4.6rem; line-height: 1.3; font-weight: 800;  }
 		
 		.lspaced-5, .lspaced-10, .wspaced-10 { letter-spacing: 0; word-spacing: 0; }
+
+		.copyright-props {
+			height: auto;
+			padding: 20px 20px;
+		}
+		.copyright-props .copyright, .copyright-props .props {
+			top: 0;
+			-webkit-transform: translateY(0);
+			-ms-transform: translateY(0);
+			transform: translateY(0);
+		}
+		.copyright-props .copyright {
+			margin-bottom: 5px;
+		}
+		.copyright-props .props {
+			margin-bottom: 0;
+		}
 		
 		#tarpits, #capitalist { width: 85%; padding: 10px; padding: 1rem; }
 
@@ -280,6 +402,7 @@
 		html {
 			font-size: 7.5px;
 		}
+		#about, #social { padding: 60px 80px; }
 	}
 
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@@ -289,26 +412,16 @@
 		}
 	}
 
-	/* Height is lacking */
-	@media only screen and (max-height: 700px) {
-		header h1, header h6 { color: #fff; }
+	/* Small Desktop */
+	@media only screen and (min-width: 981px) and (max-width: 1223px) {
+		#about h5 {
+			font-size: 15px;
+		}
 	}
 
-
-/* #Font-Face
-================================================== */
-/* 	This is the proper syntax for an @font-face file
-		Just create a "fonts" folder at the root,
-		copy your FontName into code below and remove
-		comment brackets */
-
-/*	@font-face {
-	    font-family: 'FontName';
-	    src: url('../fonts/FontName.eot');
-	    src: url('../fonts/FontName.eot?iefix') format('eot'),
-	         url('../fonts/FontName.woff') format('woff'),
-	         url('../fonts/FontName.ttf') format('truetype'),
-	         url('../fonts/FontName.svg#webfontZam02nTh') format('svg');
-	    font-weight: normal;
-	    font-style: normal; }
-*/
+	/* Large Desktop */
+	@media only screen and (min-width: 1224px) {
+		#about h5 {
+			font-size: 22px;
+		}
+	}
