--- a/css/parallax.css
+++ b/css/parallax.css
@@ -1,6 +1,6 @@
 #parallax {
   perspective: 100px;
-  height: 100vh;
+  height: 100vh; 
   overflow-x: hidden;
   overflow-y: auto; }
 
@@ -12,12 +12,13 @@
   margin-left: -900px;
   left: 50%; 
   z-index: -10;
-  }
-  .parallax__layer img {
-    display: block;
-    position: absolute;
-    bottom: 0; 
-    z-index: -10; }
+}
+
+.parallax__layer img {
+  display: block;
+  position: absolute;
+  bottom: 0; 
+  z-index: -10; }
 
 .parallax__cover {
   background: #1c0806;
@@ -26,6 +27,13 @@
   right: 0;
   height: auto;
   z-index: 9999; }
+
+.no_parallax_mobile__layer {
+  background: url('../images/bg@mobile.png') bottom center no-repeat;
+  background-size: cover;
+  height: 100vh;
+  min-height: 450px;
+}
 
 .parallax__layer__1 {
   transform: translateZ(-350px) scale(4.5); }
@@ -108,4 +116,14 @@
     -moz-animation-delay: 1.1s;
     -o-animation-delay: 1.1s;
     -ms-animation-delay: 1.1s;
+}
+
+@media only screen and (max-width: 767px) {
+  .parallax__layer, #parallax header.desktop { display: none; }
+  .no_parallax_mobile__layer { display: block;}
+}
+
+@media only screen and (min-width: 768px) {
+  .parallax__layer, #parallax header.desktop { display: block; }
+  .no_parallax_mobile__layer { display: none;}
 }
